<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/HEROESINVENTORY"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="4dp"
        android:text="@string/HEROES"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FIGHT" />

    <Button
        android:id="@+id/STORE"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginStart="104dp"
        android:text="@string/STORE"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HEROESINVENTORY" />

    <Button
        android:id="@+id/FIGHT"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FF5100"
        android:text="@string/FIGHT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ADMIN"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="4dp"
        android:text="@string/ADMIN"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/STORE" />

    <Button
        android:id="@+id/LOGOUT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="312dp"
        android:layout_marginTop="8dp"
        android:text="@string/LOGOUT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>