<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin">

  <Button
      android:id="@+id/TROUBLESHOOT"
      android:layout_width="254dp"
      android:layout_height="156dp"
      android:layout_marginStart="76dp"
      android:layout_marginTop="60dp"
      android:text="@string/TROUBLESHOOT"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/USERSETTINGS" />

  <Button
      android:id="@+id/PERMISSIONS"
      android:layout_width="254dp"
      android:layout_height="156dp"
      android:layout_marginStart="76dp"
      android:layout_marginTop="60dp"
      android:text="@string/PERMISSIONS"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/TROUBLESHOOT" />

  <Button
      android:id="@+id/USERSETTINGS"
      android:layout_width="254dp"
      android:layout_height="156dp"
      android:layout_marginStart="76dp"
      android:layout_marginTop="60dp"
      android:text="@string/ADMIN_USER_SETTINGS"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>